--- a/src/pages/home/components/Featured/index.scss
+++ b/src/pages/home/components/Featured/index.scss
@@ -18,7 +18,7 @@
             img{
                 width: 100%;
                 // height: 100%;
-                transform: translateY(-20%);
+                // transform: translateY(-20%);
                 border-radius: 10px;
             }
         }
