--- a/src/components/Loading/index.scss
+++ b/src/components/Loading/index.scss
@@ -12,7 +12,7 @@
         width: 50px;
         height: 50px;
         padding: 70px;
-        background: rgba(0,0,0,.3);
+        // background: rgba(0,0,0,.3);
         border-radius: 15px;
         transform: translate(-50%,-70%);
         .k-ball7a {
