--- a/src/pages/Read/components/Edit/index.scss
+++ b/src/pages/Read/components/Edit/index.scss
@@ -8,22 +8,87 @@
         right:0;
         z-index: 9997;
     }
-    .editContainer{
+    .chapterMask{
         position: fixed;
         left: 0;
         bottom: 0;
-        height: 600px;
-        width: 100%;
+        top:0;
+        right:0;
+        z-index: 9998;
+        background: rgba(0,0,0,.5);
+    }
+    .leftChapter{
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        top:0;
+        width: 500px;
+        z-index: 9998;
+        background: #fff;
+        .chapter{
+            
+        }
+    }
+    .editContainer{
+        box-shadow: 0 3px 10px 4px rgba(0, 0, 0, .5);
+        position: fixed;
+        left: 0;
+        right:0;
+        bottom: 0;
+        padding: 0 30px;
         transform: translateZ(0);
-        transform: translateY(100%);
-        transition: all .3s;
+        transform: translateY(110%);
+        transition: transform .3s;
         z-index: 9999;
+        background: no-repeat center/cover;
         &.show{
             transform: translateY(0)
         }
+        .editItem{
+            font-size: 30px;
+            padding: 30px 0;
+            width: 100%;
+            .fontContent{
+                margin-left: 40px;
+                .cal{
+                    .sub,.add{
+                        width: 150px;
+                        height: 50px;
+                        line-height: 50px;
+                        border-radius: 50px;
+                        // border: 2px solid #ddd;
+                        text-align: center;
+                        font-size: 50px;
+                        color: #fefefe;
+                        background: #555;
+                    }
+                    .num{
+                        width: 100px;
+                        text-align: center;
+                        padding: 0 30px;
+                    }
+                }
+                .default{
+                    font-size: 35px;
+
+                }
+            }
+            .theme{
+                margin-left: 40px;
+                .zt{
+                    width: 70px;
+                    height: 70px;
+                    background: red;
+                    border-radius: 50%;
+                    margin-right: 40px;
+                    background: no-repeat center/100% 100%;
+                    border: 2px solid #999;
+                }
+            }
+        }
     }
     .simpleBar{
-        box-shadow: 0 7px 10px 4px rgba(0, 0, 0, .2);
+        box-shadow: 0 3px 10px 4px rgba(0, 0, 0, .5);
         position: fixed;
         left: 0;
         bottom: 0;
@@ -31,12 +96,16 @@
         width: 100%;
         z-index: 9998;
         text-align: center;
+        background: no-repeat center/cover;
+        transform: translateY(110%);
+        transition: all .3s;
+        &.show{
+            transform: translateY(0);
+        }
         .iconfont{
             font-size:45px;
             font-weight: bold;
+            color: $fcolor5;
         }
-    }
-    &.white{
-        @include readBarWhite;
     }
 }
