--- a/src/pages/Read/components/Edit/index.scss
+++ b/src/pages/Read/components/Edit/index.scss
@@ -68,7 +68,7 @@
                         text-align: center;
                         font-size: 50px;
                         color: #fefefe;
-                        background: #555;
+                        background: $activePink;
                     }
                     .num{
                         width: 100px;
