--- a/src/pages/Read/index.scss
+++ b/src/pages/Read/index.scss
@@ -43,3 +43,24 @@
         }
     }
 }
+.vipTs{
+    .txt{
+        font-size: 40px;
+        color: $fcolor6;
+        text-align: center;
+        margin-top: 200px;
+        margin-bottom: 50px;
+    }
+    .backBtn{
+        background: $activePink;
+        color: #fff;
+        font-size: 35px;
+        height: 100px;
+        line-height: 100px;
+        width: 300px;
+        text-align: center;
+        border-radius: 10px;
+        margin: 0 auto;
+
+    }
+}
